[tool.poetry]
name = "blankhouseapp"
version = "0.1.0"
description = ""
authors = ["Kwangwoo Back <bnc3049@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.2"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
django = "~4.0"
django-storages = "^1.13.2"
boto3 = "^1.26.79"
Django = "~4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
